# skippy

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/glad/: glad.h
include/skippy/: shader.h
res/: shader.fs  shader.vs
src/: glad.c  main.cpp  shader.cpp
